# asml

./: CMakeLists.txt  build-cmake-asml.sh
src/: delaunaytri.cpp  delaunaytri.h  edgedetector.cpp  edgedetector.h  implementation_version.h  mainwindow.cpp  mainwindow.h  mergetriangles.cpp  mergetriangles.h  qtcvtransform.cpp  qtcvtransform.h  rasterizetriangles.cpp  rasterizetriangles.h  rgbSegmentation.cpp  rgbSegmentation.h  skindetection.cpp  skindetection.h  timinglogger.cpp  timinglogger.h  utils.h
src/kernels/: CMakeLists.txt  kernel.cu  kernel.cuh
